test {
    useJUnitPlatform()
}

jar {
    manifest {
        attributes(
                'Plugin-Id': "${project.name}",
                'Plugin-Version': "${project.version}",
        )
    }

    into('lib') {
        from configurations.compile
    }
}

sourceCompatibility = targetCompatibility = 10

dependencies {
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    compileOnly 'com.google.auto.service:auto-service'
    annotationProcessor 'com.google.auto.service:auto-service'

    compileOnly 'org.springframework.boot:spring-boot-starter'
    compileOnly 'javax.validation:validation-api'
    compileOnly project(":api")
    compileOnly 'io.projectreactor:reactor-core'

    compile 'io.lettuce:lettuce-core:5.1.7.RELEASE'

    testCompileOnly 'org.projectlombok:lombok'
    testCompileOnly 'org.springframework.boot:spring-boot-starter'
    testCompileOnly 'org.springframework.boot:spring-boot-starter-test'
    testAnnotationProcessor 'org.projectlombok:lombok'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
    testCompile project(":tck")
    testCompile 'org.assertj:assertj-core'
    testCompile 'org.testcontainers:testcontainers'
    testCompile 'org.mockito:mockito-junit-jupiter'
}
